--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="myself">
                 <!-- profile titles -->    
-                    <div class="myname black">邵翊宸123</div>
+                    <div class="myname black">邵翊宸</div>
                     <div class="work-name">網頁設計師、網站企劃、專案管理</div>
                 <!-- profile socials -->
                     <div class="social black">
