--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
             <div class="card card-start">
             <!-- profile photo -->
                 <div class="big-img">
-                    <img src="images/Eason-pic.jpg" alt="">
+                    <img src="images/Eason-pic1.jpg" alt="">
                 </div>
                 <div class="myself">
                 <!-- profile titles -->    
                     <div class="myname black">邵翊宸</div>
-                    <div class="work-name">網頁設計師、網站企劃、專案管理</div>
+                    <div class="work-name">網頁設計師、前端工程師</div>
                 <!-- profile socials -->
                     <div class="social black">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -353,7 +353,7 @@
                         </div>
                         <div class="w50-box">
                             <ul>
-                                <li><strong>Age. . . . .</strong>28</li>
+                                <li><strong>Age. . . . .</strong>30</li>
                                 <li><strong>BirthDay. . . . .</strong>07/03</li>
                                 <li><strong>Residence . . . . .</strong>Taiwan</li>
                                 <li><strong>Address . . . . .</strong>Taiwan, Keelung</li>
