--- a/index.html
+++ b/index.html
@@ -99,6 +99,19 @@
                                 <span class="title-word">EXPERIENCE</span>
                             </div>
                             <div class="content-box ">
+                                <div class="date">2020 - 在職</div>
+                                <div class="name">網頁設計師</div>
+                                <div class="name-2">方兟數位管理顧問有限公司</div>
+                                <p>
+                                    1. 使用各種軟體製作專案網頁。<br>
+                                    2. 負責系統程式的開發設計。<br>
+                                    3. 負責修正系統。<br>
+                                    4. 負責系統更新與管理。<br>
+                                    5. 與PM、設計師配合/溝通<br>
+                                    6. 與後端工程師討論/介接 API<br>
+                                </p>
+                            </div>
+                            <div class="content-box ">
                                 <div class="date">2019 - 2020</div>
                                 <div class="name">網頁設計師</div>
                                 <div class="name-2">全球華人股份有限公司</div>
@@ -108,20 +121,6 @@
                                     3. 協助產品企劃、文案編輯、行銷文件等之規劃。<br>
                                     4. 負責網頁程式的開發設計與修正更新。<br>
                                     5. 負責網站更新與管理。<br>
-                                </p>
-                            </div>
-                            <div class="content-box ">
-                                <div class="date">2016 - 2018</div>
-                                <div class="name">助教</div>
-                                <div class="name-2">格蘭英語_格蘭事業股份有限公司</div>
-                                <p>
-                                    協助孩童完成當天功課及指導學童作業<br>
-                                    協助學童做課業複習．輔導學童生行為，校正不良生活習慣<br>
-                                    協助學童建立良好人際關係，給予鼓勵。<br>
-                                    讓家長充分了解孩童學習狀況<br>
-                                    處理家長抱怨及申訴陳情<br>
-                                    協助活動規劃與執行<br>
-                                    行政事務執行，有時須至學校負責接送
                                 </p>
                             </div>
                         </div>
@@ -210,8 +209,8 @@
                                 <span></span>
                                 <span></span>
                                 <span></span>
-                                <span class="gray"></span>
-                                <span class="gray"></span>
+                                <span></span>
+                                <span></span>
                                 <span class="gray"></span>
                                 <div class="name">CSS</div>
                                 <span></span>
@@ -220,8 +219,8 @@
                                 <span></span>
                                 <span></span>
                                 <span></span>
-                                <span class="gray"></span>
-                                <span class="gray"></span>
+                                <span></span>
+                                <span></span>
                                 <span class="gray"></span>
                                 <span class="gray"></span>
                                 <div class="name">SCSS</div>
@@ -230,7 +229,7 @@
                                 <span></span>
                                 <span></span>
                                 <span></span>
-                                <span class="gray"></span>
+                                <span></span>
                                 <span class="gray"></span>
                                 <span class="gray"></span>
                                 <span class="gray"></span>
@@ -241,12 +240,23 @@
                                 <span></span>
                                 <span></span>
                                 <span></span>
-                                <span class="gray"></span>
-                                <span class="gray"></span>
+                                <span></span>
+                                <span></span>
                                 <span class="gray"></span>
                                 <span class="gray"></span>
                                 <span class="gray"></span>
                                 <div class="name">JQUERY</div>
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                                <span class="gray"></span>
+                                <span class="gray"></span>
+                                <span class="gray"></span>
+                                <span class="gray"></span>
+                                <div class="name">VUE</div>
                                 <span></span>
                                 <span></span>
                                 <span></span>
@@ -283,7 +293,7 @@
                             <P>                                
                                 桌遊是個連結人與人之間情感的橋樑，搭配溫和的馬卡龍色系，更能吸引大小朋友的目光，願你能夠帶著一顆童貞的心，進入桌上遊戲這個世界中！
                             </P>
-                            <figure class="Es-work">
+                            <!-- <figure style="height: 141px" class="Es-work h-12">
                                 <a href="https://xd.adobe.com/view/6cf315d3-5d47-4288-8c2d-370d2522ef7e-39a0/" target="_blank" class="mask">
                                     <i class="fab fa-adobe"></i>
                                 </a>
@@ -297,10 +307,10 @@
                             </div>
                             <P>                                
                                 打造時尚與平價的品牌，使用穩重的深藍色，體現出不平凡的穩重感，版面設計簡潔精準，讓每個客戶可以更快速挑選到專屬於自己的那件HOPE服飾。
-                            </P>
+                            </P> -->
                         </div>
                         <div class="w50-box">
-                            <figure class="Es-work">
+                            <!-- <figure class="Es-work">
                                 <a href="https://gaarea.hostingerapp.com/index.php" target="_blank" class="mask">
                                     <i class="fab fa-php"></i>
                                 </a>
@@ -314,6 +324,21 @@
                             </div>
                             <P> 
                                 以深紫色為主的網站配色，搭配炫麗的流動線條創造特色的電競風格，推廣電競賽事進而促進產品販售。無論新手或老手，都能在找到最適合自己的產品。
+                            </P> -->
+                            <figure style="height: 141px" class="Es-work">
+                                <a href="https://xd.adobe.com/view/6cf315d3-5d47-4288-8c2d-370d2522ef7e-39a0/" target="_blank" class="mask">
+                                    <i class="fab fa-adobe"></i>
+                                </a>
+                                <img class="pic" src="images/Eason-work2.jpg" alt="">
+                            </figure>
+                            <div class="name green text-center">
+                                HOPE 服飾
+                            </div>
+                            <div class="name-2 text-center">
+                                UI/UX
+                            </div>
+                            <P>                                
+                                打造時尚與平價的品牌，使用穩重的深藍色，體現出不平凡的穩重感，版面設計簡潔精準，讓每個客戶可以更快速挑選到專屬於自己的那件HOPE服飾。
                             </P>
                         </div>
                     </div>
@@ -331,7 +356,7 @@
                                 <li><strong>Address. . . . .</strong>Taiwan, Keelung</li>
                                 <li><strong>line. . . . .</strong>gl4u4tp6</li>
                             </ul>
-                            <a class="email" href="">EMAIL ME</a>
+                            <a class="email" href="mailto:gl4u4tp6@gmail.com">EMAIL ME</a>
                         </div>
                         <div class="w50-box">
                             <figure class="Es-pic">
@@ -348,7 +373,7 @@
                     <div class="d-flex">
                         <div class="w50-box rightBorder">
                             <p>
-                                我是邵翊宸，是由銀髮相關科系轉戰網頁設計，因為自己一直以來對資訊世界感到興趣。了解自己經驗的不足，所以會用更多的心思投入在此，並虛心學習，替未來做好準備。
+                                我是邵翊宸，是由銀髮相關科系轉戰網頁設計，因為了解現在所學到的僅是網路世界中的一小部分，自己需要保持著對新知識充滿好奇與熱忱的心態，也能不斷的摸索新領域，接觸新技術，增加自己的競爭力。
                             </p>
                         </div>
                         <div class="w50-box">
