--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>邵翊宸 Eason SHAO</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"> -->
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="layout.css">
     <link rel="stylesheet" href="reset.css">
@@ -293,21 +294,21 @@
                             <P>                                
                                 桌遊是個連結人與人之間情感的橋樑，搭配溫和的馬卡龍色系，更能吸引大小朋友的目光，願你能夠帶著一顆童貞的心，進入桌上遊戲這個世界中！
                             </P>
-                            <!-- <figure style="height: 141px" class="Es-work h-12">
-                                <a href="https://xd.adobe.com/view/6cf315d3-5d47-4288-8c2d-370d2522ef7e-39a0/" target="_blank" class="mask">
-                                    <i class="fab fa-adobe"></i>
+                            <figure style="height: 141px" class="Es-work h-12">
+                                <a href="https://easonshao21.github.io/pokemon/" target="_blank" class="mask">
+                                    <i class="fa-brands fa-vuejs"></i>
                                 </a>
-                                <img class="pic" src="images/Eason-work2.jpg" alt="">
+                                <img class="pic" src="images/Eason-work3.jpg" alt="">
                             </figure>
                             <div class="name green text-center">
-                                HOPE 服飾
+                                PokémonMasterEason
                             </div>
                             <div class="name-2 text-center">
-                                UI/UX
+                                WEB
                             </div>
                             <P>                                
-                                打造時尚與平價的品牌，使用穩重的深藍色，體現出不平凡的穩重感，版面設計簡潔精準，讓每個客戶可以更快速挑選到專屬於自己的那件HOPE服飾。
-                            </P> -->
+                                簡易的寶可夢圖鑑查詢器，可依據屬性作分類、篩選功能，並且有「我是誰」的小遊戲猜猜樂(目前更新至151隻寶可夢)
+                            </P>
                         </div>
                         <div class="w50-box">
                             <!-- <figure class="Es-work">
@@ -327,7 +328,7 @@
                             </P> -->
                             <figure style="height: 141px" class="Es-work">
                                 <a href="https://xd.adobe.com/view/6cf315d3-5d47-4288-8c2d-370d2522ef7e-39a0/" target="_blank" class="mask">
-                                    <i class="fab fa-adobe"></i>
+                                    <i class="fa-brands fa-pinterest"></i>
                                 </a>
                                 <img class="pic" src="images/Eason-work2.jpg" alt="">
                             </figure>
