--- a/index.html
+++ b/index.html
@@ -100,28 +100,26 @@
                                 <span class="title-word">EXPERIENCE</span>
                             </div>
                             <div class="content-box ">
-                                <div class="date">2020 - 在職</div>
+                                <div class="date">2023 - 在職</div>
                                 <div class="name">網頁設計師</div>
                                 <div class="name-2">方兟數位管理顧問有限公司</div>
                                 <p>
-                                    1. 使用各種軟體製作專案網頁。<br>
+                                    1. 使用 Next.js 框架重構產品網站。<br>
+                                    2. 接收其他部門提案需求、規劃網站流程、實作頁面切版與動態效果之呈現。<br>
+                                    3. bug 排除與舊有系統維護等。<br>
+                                </p>
+                            </div>
+                            <div class="content-box ">
+                                <div class="date">2020 - 2023</div>
+                                <div class="name">網頁設計師</div>
+                                <div class="name-2">方兟數位管理顧問有限公司</div>
+                                <p>
+                                    1. 使用 Vue.js 開發專案網頁。<br>
                                     2. 負責系統程式的開發設計。<br>
                                     3. 負責修正系統。<br>
                                     4. 負責系統更新與管理。<br>
                                     5. 與PM、設計師配合/溝通<br>
                                     6. 與後端工程師討論/介接 API<br>
-                                </p>
-                            </div>
-                            <div class="content-box ">
-                                <div class="date">2019 - 2020</div>
-                                <div class="name">網頁設計師</div>
-                                <div class="name-2">全球華人股份有限公司</div>
-                                <p>
-                                    1. 使用各種軟體製作專案網頁。<br>
-                                    2. 設計電子報與用戶端互動平台，並進行維護。<br>
-                                    3. 協助產品企劃、文案編輯、行銷文件等之規劃。<br>
-                                    4. 負責網頁程式的開發設計與修正更新。<br>
-                                    5. 負責網站更新與管理。<br>
                                 </p>
                             </div>
                         </div>
@@ -231,7 +229,7 @@
                                 <span></span>
                                 <span></span>
                                 <span></span>
-                                <span class="gray"></span>
+                                <span></span>
                                 <span class="gray"></span>
                                 <span class="gray"></span>
                                 <span class="gray"></span>
@@ -243,7 +241,7 @@
                                 <span></span>
                                 <span></span>
                                 <span></span>
-                                <span class="gray"></span>
+                                <span></span>
                                 <span class="gray"></span>
                                 <span class="gray"></span>
                                 <div class="name">JQUERY</div>
@@ -253,8 +251,8 @@
                                 <span></span>
                                 <span></span>
                                 <span></span>
-                                <span class="gray"></span>
-                                <span class="gray"></span>
+                                <span></span>
+                                <span></span>
                                 <span class="gray"></span>
                                 <span class="gray"></span>
                                 <div class="name">VUE</div>
@@ -264,8 +262,8 @@
                                 <span></span>
                                 <span></span>
                                 <span></span>
-                                <span class="gray"></span>
-                                <span class="gray"></span>
+                                <span></span>
+                                <span></span>
                                 <span class="gray"></span>
                                 <span class="gray"></span>
                             </div>
@@ -379,7 +377,7 @@
                         </div>
                         <div class="w50-box">
                             <ul>
-                                <li><strong>Age. . . . .</strong>30</li>
+                                <li><strong>Age. . . . .</strong>32</li>
                                 <li><strong>BirthDay. . . . .</strong>07/03</li>
                                 <li><strong>Residence . . . . .</strong>Taiwan</li>
                                 <li><strong>Address . . . . .</strong>Taiwan, Keelung</li>
